# pqcrypta-proxy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  release-please-config.json
.github/: SECURITY.md  dependabot.yml
.github/workflows/: cargo-deny.yml  ci.yml  codeql.yml  ossf-scorecard.yml  release-please.yml  secret-scan.yml  stale.yml
config/: example-config.toml  proxy-config.toml  remotellm-proxy.toml
data/: .last_processed_byte
data/blocklists/: blocked_ips.json  sync_status.json
docker/: Dockerfile
docs/: CONFIG.md  SECURITY.md
packaging/macos/: com.pqcrypta.proxy.plist
packaging/systemd/: pqcrypta-proxy.service
packaging/windows/: README.md
pentests/: README.md  config.demo.sh  preflight.sh  run_all.sh  scope_guard.sh
pentests/scripts/: 01_waf_bypass.sh  02_bot_detection.sh  03_header_injection.sh  04_rate_limit.sh  05_api_auth.sh  06_tls_ssl.sh  07_advanced_smuggling.sh  08_ssrf.sh  09_cache_poison.sh  10_crypto_api_fuzz.sh  11_timing_oracle.sh  12_waf_evasion_advanced.sh  13_websocket.sh  14_recon.sh  15_auth_session.sh  16_business_logic.sh  17_client_side_csp.sh  18_resilience_chaos.sh  19_auth_hardening.sh  20_authz_access_control.sh  21_supply_chain.sh  22_cloud_infrastructure.sh  23_client_side_js.sh  24_data_privacy.sh  25_container_security.sh  26_cicd_pipeline.sh  27_database_storage.sh  28_ai_llm.sh  29_xxe.sh  30_ssti.sh  31_file_upload.sh  32_grpc_protobuf.sh
scripts/: detect_bots_from_logs.sh  download_geoip.sh  ip-update.service  ip-update.sh  ip-update.timer  refresh_fingerprint_db.sh  setup_cron.sh  setup_fingerprint_db.sh  sync_blocklist.sh
src/: access_logger.rs  acme.rs  admin.rs  audit_logger.rs  cache.rs  compression.rs  config.rs  connect_udp.rs  fingerprint.rs  http3_features.rs  http_listener.rs  lib.rs  load_balancer.rs  main.rs  metrics.rs  ocsp.rs  otel.rs  pqc_extended.rs  pqc_tls.rs  proxy.rs  quic_listener.rs  rate_limiter.rs  security.rs  speedtest.rs  telemetry.rs  tls.rs  tls_acceptor.rs  waf.rs  webtransport_server.rs
src/handlers/: mod.rs  webtransport.rs
tests/: ack_frequency.rs  integration.rs  unit_config.rs
