[package]
name = "pqcrypta-proxy"
version = "0.2.2"
edition = "2021"
authors = ["PQCrypta Team <team@pqcrypta.com>"]
description = "Production-ready QUIC/HTTP/3/WebTransport proxy with hybrid PQC TLS support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PQCrypta/pqcrypta-proxy"
readme = "README.md"
keywords = ["quic", "http3", "webtransport", "pqc", "proxy", "post-quantum"]
categories = ["network-programming", "cryptography", "web-programming"]

[features]
default = ["pqc", "pqc-signatures", "metrics", "admin-api", "geoip", "acme"]
# Enable PQC hybrid key exchange via OpenSSL 3.5+ (native ML-KEM)
# Also enables extended algorithm detection and configuration
pqc = ["openssl", "openssl-sys", "openssl-probe"]
# Extended PQC with ML-DSA signatures (unstable aws-lc-rs API)
pqc-signatures = ["aws-lc-rs/unstable"]
# Prometheus metrics endpoint
metrics = ["prometheus"]
# Admin HTTP API for health, reload, shutdown
admin-api = ["tower-http"]
# ACME certificate automation (works with any ACME CA: Let's Encrypt, ZeroSSL, Buypass, etc.)
acme = ["instant-acme"]
# Windows service support
windows-service = ["windows-service-rs"]
# SEC-006: Legacy pre-NIST Kyber768 support (disabled by default).
# Enables Kyber768 and X25519Kyber768 for backward compatibility with deployments
# that have not yet migrated to the finalised ML-KEM (FIPS 203) standard.
# These algorithms are NOT FIPS 203 compliant and NOT interoperable with
# standard ML-KEM peers.  DO NOT enable in new deployments.
legacy-pqc = []
# GeoIP blocking support
geoip = ["maxminddb"]
# FIPS mode for aws-lc-rs (requires FIPS-validated build)
fips = ["aws-lc-rs/fips"]

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "tracing", "signal"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
tokio-stream = { version = "0.1", features = ["net"] }

# QUIC and HTTP/3
quinn = "0.11"
quinn-proto = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"

# WebTransport (proper protocol support)
wtransport = { path = "vendor/wtransport", features = ["quinn"] }

# HTTP client/server for backend proxying
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "tokio"] }
http = "1.2"
http-body-util = "0.1"
bytes = "1.9"

# TLS with PQC support via aws-lc-rs (has ML-KEM)
# prefer-post-quantum feature enables X25519MLKEM768 as preferred key exchange
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "prefer-post-quantum"] }
rustls-pemfile = "2.2"
rustls-pki-types = { version = "1.9", features = ["alloc"] }
rustls-native-certs = "0.8"
rcgen = "0.14"
webpki-roots = "0.26"

# Post-quantum support for rustls (X25519MLKEM768 hybrid via aws-lc-rs)
rustls-post-quantum = "0.2"

# OpenSSL for PQC support (optional feature)
openssl = { version = "0.10", optional = true, default-features = false }
openssl-sys = { version = "0.9", optional = true }
openssl-probe = { version = "0.1", optional = true }

# aws-lc-rs for extended PQC (ML-KEM direct, ML-DSA when unstable enabled)
aws-lc-rs = "1.15"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Admin API and HTTP listener
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls", "tls-openssl"] }
tower = "0.5"
# Async OpenSSL for TLS connections with PQC
tokio-openssl = "0.6"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit"], optional = true }

# Metrics (optional feature)
prometheus = { version = "0.14", optional = true }

# Utilities
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
rand = "0.8"
subtle = "2.6"
jsonwebtoken = "9.3"
parking_lot = "0.12"
dashmap = "6.1"
arc-swap = "1.7"

# Hot reload - file watching
notify = "7.0"

# Rate limiting
governor = "0.7"
nonzero_ext = "0.3"

# Compression
async-compression = { version = "0.4", features = ["tokio", "brotli", "zstd", "gzip", "deflate"] }
brotli = "7.0"
zstd = "0.13"
flate2 = "1.0"

# Circuit breaker
failsafe = "1.3"

# GeoIP (optional)
maxminddb = { version = "0.27", optional = true }

# JA3/JA4 fingerprinting
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"

# X.509 certificate parsing (for OCSP)
x509-parser = "0.16"

# HTTP client for OCSP requests and ACME
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# ACME client (RFC 8555) - works with any ACME CA
instant-acme = { version = "0.7", optional = true }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Futures utilities
futures = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"

# URL parsing
url = "2.5"

# IP address handling
ipnetwork = "0.20"
ipnet = { version = "2.10", features = ["serde"] }

# Regex for route matching
regex = "1.11"

# TLS for backend connections (re-encrypt mode)
hyper-rustls = { version = "0.27", features = ["http1", "http2", "native-tokio", "tls12"] }
tokio-rustls = "0.26"

# Windows service (optional)
windows-service-rs = { version = "0.7", package = "windows-service", optional = true }

# Temporary files (cross-platform)
tempfile = "3.14"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "user"] }
# Unix socket support for PHP-FPM backends (not available on Windows)
hyperlocal = "0.9"
# Signal handling (uses Unix-specific signal iterators)
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"
assert_matches = "1.5"

[[bin]]
name = "pqcrypta-proxy"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

# Enable rpath for OpenSSL 3.5 to be found at runtime
[profile.release.build-override]
# Empty override to ensure main profile settings apply

[profile.bench]
debug = true

[lints.rust]
# F-12: Enforce unsafe_code = deny globally. The pqc_tls.rs module carries
# a targeted #![allow(unsafe_code)] for its OpenSSL FFI bindings; all other
# modules must not introduce unsafe blocks without explicit justification.
unsafe_code = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
